# internal/dto/auth_dto.go
@@ -5,3 +5,13 @@ type SignUpRequest struct {
 	Nickname string `json:"nickname"`
 	Password string `json:"password"`
 }
+
+type LoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type LoginResponse struct {
+	Token string       `json:"token"`
+	User  UserResponse `json:"user"`
+}
